* Add a FAQ (also available online at http://open-mx.gforge.inria.fr/FAQ/)
  containing most of the old README and much more.

Other improvements from previous release:
* Optimize intra-node communication by overlapping memory-pinning,
  to be enabled with the demandpin kernel module parameter.
* Fix intra-node medium send completion in case of event queue full on
  the target endpoint.
* Fix omx_init start/stop timeout to deal with peer discovery start/stop
  delay better.
* Fix cross-compilation when the cross-compiler is given at
  build and not at configure time.
* Fix modinfo and modprobe usage in the startup script, they are supposed
  to be in /sbin.
* Fix invalid memory free in case of early-received large message notify.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 0.7.0 (June 27th 2008, svn r1806)
=========================================
The Binary Compatibility release.

Major Enhancements:
* Add binary compatibility with MX (from MX version 0.9).
  + The 32bits ABI has changed, applications may have to
    be rebuilt on these architectures.

Other improvements from previous release:
* Fix hostname resolution wire compatibility with MX.
* Fix hostname resolution problems on multi-NICs machines.
* Fix enabling of FMA build/install.
* Fix resending of medium messages that were early completed and
  freed by the application.
* Fix interface removal when a peer discovery program is running.
* Fix driver oops when trying to use interfaces that do not
  provide ethtool ops.
* Fix the init script to be called in all runlevels.
* Add the ability to test/wait_any across multiple context ids.

Open-MX 0.6.0 (May 20th 2008, svn r1727)
========================================
The Dynamic Peer Discovery release.

Major Enhancements:
* Add dynamic peer discovery with the omxoed tool. It is automatically
  started by omx_init when loading the module. Also add support for