@@ -831,6 +831,9 @@ omx__isend_req(struct omx_endpoint *ep, struct omx__partner *partner,
 		    (unsigned) OMX__SEQNUM(partner->next_send_seq),
 		    (unsigned) OMX__SESNUM_SHIFTED(partner->next_send_seq));
 
+  if (unlikely(!requestp))
+    req->generic.state |= OMX_REQUEST_STATE_ZOMBIE;
+
 #ifndef OMX_DISABLE_SELF
   if (unlikely(omx__globals.selfcomms && partner == ep->myself)) {
     omx__process_self_send(ep, req);
@@ -854,7 +857,6 @@ omx__isend_req(struct omx_endpoint *ep, struct omx__partner *partner,
   if (requestp) {
     *requestp = req;
   } else {
-    req->generic.state |= OMX_REQUEST_STATE_ZOMBIE;
     ep->zombies++;
   }
 
@@ -961,6 +963,9 @@ omx__issend_req(struct omx_endpoint *ep, struct omx__partner *partner,
 		    (unsigned) OMX__SEQNUM(partner->next_send_seq),
 		    (unsigned) OMX__SESNUM_SHIFTED(partner->next_send_seq));
 
+  if (unlikely(!requestp))
+    req->generic.state |= OMX_REQUEST_STATE_ZOMBIE;
+
 #ifndef OMX_DISABLE_SELF
   if (unlikely(omx__globals.selfcomms && partner == ep->myself)) {
     omx__process_self_send(ep, req);
@@ -971,7 +976,6 @@ omx__issend_req(struct omx_endpoint *ep, struct omx__partner *partner,
   if (requestp) {
     *requestp = req;
   } else {
-    req->generic.state |= OMX_REQUEST_STATE_ZOMBIE;
     ep->zombies++;
   }
 
