@@ -13,6 +13,7 @@ Other improvements from previous release:
   to be enabled with the demandpin kernel module parameter.
 * Fix intra-node medium send completion in case of event queue full on
   the target endpoint.
+* Fix forgotten/zombie send request support.
 * Fix omx_init start/stop timeout to deal with peer discovery start/stop
   delay better.
 * Fix cross-compilation when the cross-compiler is given at
